--- a/style.css
+++ b/style.css
@@ -8,14 +8,14 @@ body {
 
 .container {
   padding: 80px;
-  text-align: center;
+  text-align: left;
 }
 
 h1 {
   color: darkred;
   font-size: 60px;
   letter-spacing: 10px;
-  animation: glitch 1s infinite;
+  animation: glitch 0.6s infinite;
 }
 
 h2 {
@@ -49,4 +49,19 @@ a:hover {
   font-size: 12px;
   color: gray;
   margin-top: 40px;
+}
+.contenido-transmision {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 20px;
+}
+
+.texto {
+    flex: 1;
+}
+
+.gif-transmision {
+    width: 200px;
+    border-radius: 10px;
 }
